Trying to fix the scrollbar to not appear on mobile devices

--- a/style.css
+++ b/style.css
@@ -381,6 +381,6 @@ h2 {
         -webkit-appearance: none;
     }  
   body{
-    overflow: hidden;
+    overflow-y: hidden;
   }
 }
